[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
winapi = { version = "0.3", features = ["winuser", "psapi", "processthreadsapi"] }
ws = "0.9.2"
